--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -15,7 +15,5 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: 16.x
-        cache: 'npm'
 
-    - run: npm ci
-    - run: npm test
+    - run: yarn && yarn test
