--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,9 +25,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 16.x
-          cache: 'npm'
+          node-version: 16.x 
 
-      - run: npm ci
-      - run: npm run lint
-      - run: npm run typecheck
+      - run: yarn && yarn lint
+      - run: yarn typecheck
