--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "react-virtualized": "^9.22.3",
     "remark-gfm": "^3.0.1",
     "remark-parse": "^10.0.1",
+    "mdsmirror": "^0.1.3",
+    "styled-components": "^5.3.5",
     "slate": "^0.77.0",
     "slate-history": "^0.66.0",
     "slate-hyperscript": "^0.77.0",
