--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "react-toastify": "^8.2.0",
     "react-virtual": "^2.10.4",
     "mdsmirror": "^0.0.5",
-    "mdkit-mdmap": "0.0.3",
-    "mdkit-mdmark": "0.0.1",
+    "mdsmap": "0.0.1",
+    "mdsmark": "0.0.1",
     "styled-components": "^5.3.5",
     "tailwindcss": "^3.0.24",
     "zustand": "^3.7.2"
