--- a/public/manifest.json
+++ b/public/manifest.json
@@ -24,5 +24,5 @@
   "background_color": "#FFFFFF",
   "start_url": "/app/",
   "display": "standalone",
-  "orientation": "portrait"
+  "orientation": "natural"
 }
